--- a/styles/base.less
+++ b/styles/base.less
@@ -126,13 +126,13 @@ a {
 // tweak: { "type" : "font", "title" : "Site Title", "category" : "Typography", "target" : ".site-title", "loadAllVariants" : false }
 .site-title-font {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 700;
+  font-weight: 500;
   font-style: normal;
   font-size: 3em;
   letter-spacing: 0px;
   line-height: 1.6em;
   text-decoration: none;
-  text-transform: uppercase;
+  text-transform: lowercase;
 }
 
 
